# exercism-rust

./: 0.bootstrap.js  README.md  bootstrap.js
anagram/.exercism/: metadata.json
anagram/src/: lib.rs
brainfxck/: Cargo.toml
brainfxck-cli/: Cargo.toml
brainfxck-cli/src/: main.rs
brainfxck/misc/: brainfxxk.rb
brainfxck/src/: lib.rs
digital_clock/: Cargo.toml
digital_clock/src/: main.rs
grains/.exercism/: metadata.json
grains/src/: lib.rs
hello-world/.exercism/: metadata.json
json-parser/: Cargo.toml
json-parser/src/: lib.rs
leap/.exercism/: metadata.json
leap/src/: lib.rs
life-game/: Cargo.toml
life-game/src/: lib.rs
life-game/www/: index.html  index.js  package-lock.json  package.json
ls/: Cargo.toml
ls/src/: main.rs
macro-sandbox/hello_macro/: Cargo.toml
macro-sandbox/hello_macro_derive/: Cargo.toml
macro-sandbox/hello_macro_example/: Cargo.toml
macro-sandbox/json/: Cargo.toml
minesweeper/.exercism/: metadata.json
minesweeper/src/: lib.rs
minesweeper/tests/: minesweeper.rs
ocr-numbers/.exercism/: metadata.json
ocr-numbers/src/: lib.rs
ocr-numbers/tests/: ocr-numbers.rs
phone-number/.exercism/: metadata.json
phone-number/src/: lib.rs
phone-number/tests/: phone-number.rs
pig-latin/.exercism/: metadata.json
pig-latin/src/: lib.rs
red-black-tree/: Cargo.toml  README.md
shell/: Cargo.toml
shell/src/: main.rs
thread-pool/: Cargo.toml
waf/: Cargo.toml
waf-bench/: README.md  clone.sh
waf/examples/: hello.rs
waf/src/: lib.rs
wasm-audio/: Cargo.toml  LICENSE_MIT  README.md
wc/: Cargo.toml
(+61 files in other folders)
