[package]
name = "digital_clock"
version = "0.1.0"
authors = ["Takeshi Horiuchi <keshihoriuchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "wingdi"] }
chrono = "0.4"