[package]
name = "waf"
version = "0.1.0"
authors = ["Takeshi Horiuchi <keshihoriuchi@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
